2009-11-04 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyMuon.cc, ISpyPATMuon.cc: fix cast problem w/charge

2009-10-09 Tom McCauley <thomas.mccauley@cern.ch>

	* VisTriggerEvent.cc: add more information and 
	fix iteration over trigger objects

2009-10-07 Tom McCauley <thomas.mccauley@cern.ch>

	* VisSuperCluster: add rec hit fractions
	* VisCaloCluster: add (to replace VisBasicCluster)
	* VisPreshowerCluster: add
	* VisE*RecHit: add writing to Products_V1
	
2009-10-06  Ianna Osborne  <ianna.osborne@cern.ch>

	* *.h, *.cc, BuildFile, MakeVisAnalyzer.py: Migrated from
	VisReco/Analyzer. Paths updated. Systematically removed Iguana,
	not to confuse both packages. Vis* renamed to ISpy*.
	* python/ISpy*.py: Former Vis*.py renamed.
	* ISpyService.h, ISpyService.cc: Former IguanaService.h,
	IguanaService.cc renamed. All related classes updated.
	* ISpyNetProducer.h: Former IguanaNetProducer.h renamed.
	* .admin/developers: Migrated from VisReco/Analyzer.
	
2009-10-05 Tom McCauley <thomas.mccauley@cern.ch>

	* VisSuperCluster: add

2009-10-01 Tom McCauley <thomas.mccauley@cern.ch>

	* ispy_33X_cfg.py: add

2009-10-01 Tom McCauley <thomas.mccauley@cern.ch>

	* VisPhoton, VisPATPhoton, VisElectron, VisGsfElectron: add
	* Vis*Track*, Vis*Electron, Vis*Muon: fix charge type from double to int  

2009-09-28 Tom McCauley <thomas.mccauley@cern.ch>

	* MakeVisAnalyzer.py: new IgCollection include path
	* VisPATMuon: add

2009-09-27 Tom McCauley <thomas.mccauley@cern.ch>

	* VisTrackRefitter: add for use in VisMuon, etc.
	* VisMuon: use above
	* *.h, *.cc: clean up error messages to indicate actual error
	* MakeVisAnalyzer.py: modify to reflect changes above

2009-09-24 Tom McCauley <thomas.mccauley@cern.ch>

	* VisPATElectron: add
	* BuildFile: add support for PAT
	* VisGsfTrack: clean up of static_casts

2009-09-24  Ianna Osborne  <ianna.osborne@cern.ch>

	* IguanaService.h, IguanaService.cc: Add a buffer to keep track of
	objects.